Fix major issue with the Collection missing whole albums, and mixing up artists.

Big thanks to Ralf Engels, who came up with this fix! :)

BUG: 262459
CCMAIL: amarok-devel@kde.org