src/core-impl/collections/db/sql/SqlScanResultProcessor.cpp
@@ -161,6 +161,7 @@ SqlScanResultProcessor::commitTrack( CollectionScanner::Track *track,
     if( m_foundTracks.contains( uid ) )
     {
         warning() << "track"<<track->path()<<"with uid"<<uid<<"already committed. There seems to be a duplicate uid.";
+        return;
     }
     m_foundTracks.insert( uid );
 
